updated the evaluation metric for the train

--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,59 +215,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision AVG\n",
-      "K-Means          1         3         5         7         9         11        13\n",
-      "Threshold                                                                      \n",
-      "-0.5       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
-      "-0.4       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
-      "-0.3       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
-      "-0.2       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
-      "-0.1       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
-      " 0.0       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
-      " 0.1       0.375483  0.378171  0.384955  0.386396  0.387890  0.387974  0.388824\n",
-      " 0.2       0.375483  0.378171  0.384942  0.386354  0.387848  0.387926  0.388753\n",
-      " 0.3       0.374687  0.377268  0.383516  0.384615  0.385941  0.385656  0.386306\n",
-      " 0.4       0.367638  0.368753  0.373170  0.373065  0.372765  0.371228  0.371184\n",
-      " 0.5       0.349868  0.348731  0.350019  0.348439  0.346878  0.344167  0.343002\n",
-      " 0.6       0.323061  0.318747  0.317530  0.313859  0.310242  0.305972  0.303455\n",
-      " 0.7       0.274906  0.264682  0.257780  0.250349  0.243554  0.236454  0.230334\n",
-      "\n",
-      "Recall AVG\n",
-      "K-Means          1         3         5         7         9         11        13\n",
-      "Threshold                                                                      \n",
-      "-0.5       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
-      "-0.4       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
-      "-0.3       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
-      "-0.2       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
-      "-0.1       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
-      " 0.0       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
-      " 0.1       0.382939  0.383454  0.387596  0.387014  0.386579  0.383350  0.382016\n",
-      " 0.2       0.382939  0.383454  0.387596  0.387014  0.386580  0.383351  0.382016\n",
-      " 0.3       0.382971  0.383488  0.387650  0.387093  0.386647  0.383413  0.382089\n",
-      " 0.4       0.384327  0.384914  0.389214  0.388653  0.388246  0.385057  0.383762\n",
-      " 0.5       0.385559  0.385316  0.388168  0.386831  0.385691  0.381709  0.380265\n",
-      " 0.6       0.379050  0.375044  0.374768  0.371318  0.367606  0.362428  0.359038\n",
-      " 0.7       0.334632  0.322524  0.314149  0.305388  0.296804  0.287440  0.279611\n",
-      "\n",
-      "F1 AVG\n",
-      "K-Means          1         3         5         7         9         11        13\n",
-      "Threshold                                                                      \n",
-      "-0.5       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
-      "-0.4       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
-      "-0.3       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
-      "-0.2       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
-      "-0.1       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
-      " 0.0       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
-      " 0.1       0.363260  0.364957  0.370687  0.371170  0.371908  0.370462  0.370326\n",
-      " 0.2       0.363260  0.364957  0.370682  0.371153  0.371890  0.370441  0.370293\n",
-      " 0.3       0.362814  0.364471  0.369866  0.370143  0.370778  0.369150  0.368903\n",
-      " 0.4       0.359053  0.359877  0.364201  0.363722  0.363381  0.361025  0.360443\n",
-      " 0.5       0.348456  0.347544  0.349373  0.347843  0.346441  0.343184  0.342049\n",
-      " 0.6       0.330312  0.326077  0.325335  0.321978  0.318478  0.314033  0.311226\n",
-      " 0.7       0.284197  0.273589  0.266647  0.259069  0.251812  0.244122  0.237852\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Access the contents\u001b[39;00m\n\u001b[1;32m     13\u001b[0m filepath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     15\u001b[0m     result \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[1;32m     17\u001b[0m cosine_iou_metric_precision \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcosine_iou_metric_precision\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl'"
      ]
     }
    ],
@@ -284,30 +240,30 @@
     "final_f1 = []\n",
     "\n",
     "# Access the contents\n",
-    "# filepath = \"/media/ekoller/T7/Results/max/statistics_segmentation_0to60.pkl\"\n",
-    "# with open(filepath, 'rb') as file:\n",
-    "#     result = pickle.load(file)\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
     "\n",
-    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "# final_precision.extend(cosine_iou_metric_precision)\n",
-    "# final_recall.extend(cosine_iou_metric_recall)\n",
-    "# final_f1.extend(cosine_metric_f1)\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
     "\n",
     "\n",
-    "# filepath = \"/media/ekoller/T7/Results/max/statistics_segmentation_60to120.pkl\"\n",
-    "# with open(filepath, 'rb') as file:\n",
-    "#     result = pickle.load(file)\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_60to120.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
     "\n",
-    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
-    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
-    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
-    "# final_precision.extend(cosine_iou_metric_precision)\n",
-    "# final_recall.extend(cosine_iou_metric_recall)\n",
-    "# final_f1.extend(cosine_metric_f1)\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/median/statistics_segmentation_120to180.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_120to180.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -352,12 +308,147 @@
     "\n",
     "\n",
     "# Display the tables\n",
+    "#print(\"Precision AVG\")\n",
+    "#print(df_precision)\n",
+    "print(\"\\nRecall AVG\")\n",
+    "#print(df_recall)\n",
+    "print(\"\\nF1 AVG\")\n",
+    "print(df_f1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Find the location (index and column) of the maximum F1 score\n",
+    "max_f1_value = df_f1.max().max()  # Get the maximum F1 score\n",
+    "max_f1_location = df_f1.stack().idxmax()  # Get the corresponding index (threshold) and column (k-means)\n",
+    "\n",
+    "# Extract the threshold and k-value\n",
+    "best_threshold, best_k_value = max_f1_location\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"The highest F1 score is {max_f1_value:.4f}, achieved at threshold {best_threshold} and K-Means value {best_k_value}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision AVG\n",
+      "K-Means          1         3         5         7         9        11        13\n",
+      "Threshold                                                                     \n",
+      "-0.1       0.574273  0.572028  0.561454  0.581675  0.568803  0.54906  0.538554\n",
+      "-0.2       0.574273  0.572028  0.561454  0.581675  0.568803  0.54906  0.538554\n",
+      "-0.3       0.574273  0.572028  0.561454  0.581675  0.568803  0.54906  0.538554\n",
+      "-0.4       0.574273  0.572028  0.561454  0.581675  0.568803  0.54906  0.538554\n",
+      "\n",
+      "Recall AVG\n",
+      "K-Means          1         3         5         7         9         11        13\n",
+      "Threshold                                                                      \n",
+      "-0.1       0.581034  0.572586  0.559801  0.568031  0.563237  0.546342  0.534263\n",
+      "-0.2       0.581034  0.572586  0.559801  0.568031  0.563237  0.546342  0.534263\n",
+      "-0.3       0.581034  0.572586  0.559801  0.568031  0.563237  0.546342  0.534263\n",
+      "-0.4       0.581034  0.572586  0.559801  0.568031  0.563237  0.546342  0.534263\n",
+      "\n",
+      "F1 AVG\n",
+      "K-Means          1         3         5         7         9         11        13\n",
+      "Threshold                                                                      \n",
+      "-0.1       0.553746  0.548805  0.536755  0.549412  0.541765  0.524056  0.514383\n",
+      "-0.2       0.553746  0.548805  0.536755  0.549412  0.541765  0.524056  0.514383\n",
+      "-0.3       0.553746  0.548805  0.536755  0.549412  0.541765  0.524056  0.514383\n",
+      "-0.4       0.553746  0.548805  0.536755  0.549412  0.541765  0.524056  0.514383\n",
+      "The highest F1 score is 0.5537, achieved at threshold -0.1 and K-Means value 1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_precision_2 = []\n",
+    "final_recall_2 = []\n",
+    "final_f1_2 = []\n",
+    "# Access the contents\n",
+    "# filepath = \"/media/ekoller/T7/Results_2/avg/statistics_segmentation_0to60.pkl\"\n",
+    "# with open(filepath, 'rb') as file:\n",
+    "#     result = pickle.load(file)\n",
+    "\n",
+    "# cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "# cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "# cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "# final_precision_2.extend(cosine_iou_metric_precision)\n",
+    "# final_recall_2.extend(cosine_iou_metric_recall)\n",
+    "# final_f1_2.extend(cosine_metric_f1)\n",
+    "\n",
+    "\n",
+    "filepath = \"/media/ekoller/T7/Results_2/avg/statistics_segmentation_tryout_median_120.180.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
+    "\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision_2.extend(cosine_iou_metric_precision)\n",
+    "final_recall_2.extend(cosine_iou_metric_recall)\n",
+    "final_f1_2.extend(cosine_metric_f1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # Print to check the values\n",
+    "# print(\"Cosine IoU Metric Precision:\", np.mean(cosine_iou_metric_precision, axis=0))\n",
+    "# print(\"Cosine IoU Metric Recall:\", np.mean(cosine_iou_metric_recall, axis=0))\n",
+    "# print(\"Cosine Metric F1:\", np.mean(cosine_metric_f1, axis= 0))\n",
+    "\n",
+    "final_precision_2 = np.mean(final_precision_2, axis=0)\n",
+    "final_recall_2 = np.mean(final_recall_2, axis=0)\n",
+    "final_f1_2= np.mean(final_f1_2, axis= 0)\n",
+    "\n",
+    "k_means= [1,3,5,7,9,11,13]\n",
+    "threshold= [-0.1,-0.2,-0.3,-0.4]\n",
+    "\n",
+    "# Create a DataFrame for each metric\n",
+    "df_precision = pd.DataFrame(final_precision_2, index=threshold, columns=k_means)\n",
+    "df_recall = pd.DataFrame(final_recall_2, index=threshold, columns=k_means)\n",
+    "df_f1 = pd.DataFrame(final_f1_2, index=threshold, columns=k_means)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Set index and column labels for better readability\n",
+    "df_precision.index.name = 'Threshold'\n",
+    "df_precision.columns.name = 'K-Means'\n",
+    "\n",
+    "df_recall.index.name = 'Threshold'\n",
+    "df_recall.columns.name = 'K-Means'\n",
+    "\n",
+    "df_f1.index.name = 'Threshold'\n",
+    "df_f1.columns.name = 'K-Means'\n",
+    "\n",
+    "# Set Pandas options to display without wrapping\n",
+    "pd.set_option('display.max_columns', None)  # Ensure all columns are shown\n",
+    "pd.set_option('display.width', None)        # Make display width flexible\n",
+    "pd.set_option('display.expand_frame_repr', False)  # Prevent wrapping\n",
+    "\n",
+    "\n",
+    "# Display the tables\n",
     "print(\"Precision AVG\")\n",
     "print(df_precision)\n",
     "print(\"\\nRecall AVG\")\n",
     "print(df_recall)\n",
     "print(\"\\nF1 AVG\")\n",
-    "print(df_f1)"
+    "print(df_f1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Find the location (index and column) of the maximum F1 score\n",
+    "max_f1_value = df_f1.max().max()  # Get the maximum F1 score\n",
+    "max_f1_location = df_f1.stack().idxmax()  # Get the corresponding index (threshold) and column (k-means)\n",
+    "\n",
+    "# Extract the threshold and k-value\n",
+    "best_threshold, best_k_value = max_f1_location\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"The highest F1 score is {max_f1_value:.4f}, achieved at threshold {best_threshold} and K-Means value {best_k_value}.\")\n"
    ]
   },
   {
