--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -211,19 +211,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Access the contents\u001b[39;00m\n\u001b[1;32m     13\u001b[0m filepath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     15\u001b[0m     result \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[1;32m     17\u001b[0m cosine_iou_metric_precision \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcosine_iou_metric_precision\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision AVG\n",
+      "\n",
+      "Recall AVG\n",
+      "\n",
+      "F1 AVG\n",
+      "K-Means        1         3        5         7         9         11        13\n",
+      "Threshold                                                                   \n",
+      "-0.9       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "-0.8       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "-0.7       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "-0.6       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "-0.5       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "-0.4       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "-0.3       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "-0.2       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "-0.1       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.0       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.1       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.2       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.3       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.4       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.5       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.6       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.7       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.8       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      " 0.9       0.4768  0.484707  0.49251  0.496017  0.495667  0.496808  0.495362\n",
+      "The highest F1 score is 0.4968, achieved at threshold -0.9 and K-Means value 11.\n"
      ]
     }
    ],
@@ -240,7 +261,18 @@
     "final_f1 = []\n",
     "\n",
     "# Access the contents\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_0to60.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/max/statistics_0.45.pkl\"\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
+    "\n",
+    "cosine_iou_metric_precision = result.get(\"cosine_iou_metric_precision\", None)\n",
+    "cosine_iou_metric_recall = result.get(\"cosine_iou_metric_recall\", None)\n",
+    "cosine_metric_f1 = result.get(\"cosine_mectric_f1\", None)\n",
+    "final_precision.extend(cosine_iou_metric_precision)\n",
+    "final_recall.extend(cosine_iou_metric_recall)\n",
+    "final_f1.extend(cosine_metric_f1)\n",
+    "\n",
+    "filepath = \"/media/ekoller/T7/Results/max/statistics_45.90.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -252,7 +284,7 @@
     "final_f1.extend(cosine_metric_f1)\n",
     "\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_60to120.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/max/statistics_90.135.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -263,7 +295,7 @@
     "final_recall.extend(cosine_iou_metric_recall)\n",
     "final_f1.extend(cosine_metric_f1)\n",
     "\n",
-    "filepath = \"/media/ekoller/T7/Results/avg/statistics_segmentation_120to180.pkl\"\n",
+    "filepath = \"/media/ekoller/T7/Results/max/statistics_135.180.pkl\"\n",
     "with open(filepath, 'rb') as file:\n",
     "    result = pickle.load(file)\n",
     "\n",
@@ -284,7 +316,7 @@
     "final_f1= np.mean(final_f1, axis= 0)\n",
     "\n",
     "k_means= [1,3,5,7,9,11,13]\n",
-    "threshold= [-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7]\n",
+    "threshold= [-0.9,-0.8,-0.7,-0.6,-0.5,-0.4,-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7,0.8,0.9]\n",
     "\n",
     "# Create a DataFrame for each metric\n",
     "df_precision = pd.DataFrame(final_precision, index=threshold, columns=k_means)\n",
@@ -308,7 +340,7 @@
     "\n",
     "\n",
     "# Display the tables\n",
-    "#print(\"Precision AVG\")\n",
+    "print(\"Precision AVG\")\n",
     "#print(df_precision)\n",
     "print(\"\\nRecall AVG\")\n",
     "#print(df_recall)\n",
