debugged evaluation in 3d space

--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +219,50 @@
      "output_type": "stream",
      "text": [
       "Precision AVG\n",
+      "K-Means          1         3         5         7         9         11        13\n",
+      "Threshold                                                                      \n",
+      "-0.9       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      "-0.8       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      "-0.7       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      "-0.6       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      "-0.5       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      "-0.4       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      "-0.3       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      "-0.2       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      "-0.1       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      " 0.0       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      " 0.1       0.518283  0.522129  0.528503  0.533669  0.534603  0.534046  0.538447\n",
+      " 0.2       0.518263  0.522098  0.528438  0.533570  0.534483  0.533894  0.538226\n",
+      " 0.3       0.516894  0.520360  0.526134  0.530781  0.531490  0.530266  0.534155\n",
+      " 0.4       0.506356  0.507992  0.510885  0.513466  0.512596  0.509921  0.509786\n",
+      " 0.5       0.481252  0.477706  0.478273  0.478311  0.475616  0.471965  0.470268\n",
+      " 0.6       0.439317  0.430544  0.427032  0.423930  0.418777  0.413156  0.409741\n",
+      " 0.7       0.367450  0.350364  0.340279  0.332123  0.322276  0.313385  0.305761\n",
+      " 0.8       0.216026  0.191945  0.172819  0.154396  0.143573  0.134600  0.126440\n",
+      " 0.9       0.049537  0.043914  0.041417  0.037297  0.036500  0.036186  0.035882\n",
       "\n",
       "Recall AVG\n",
+      "K-Means          1         3         5         7         9         11        13\n",
+      "Threshold                                                                      \n",
+      "-0.9       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      "-0.8       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      "-0.7       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      "-0.6       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      "-0.5       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      "-0.4       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      "-0.3       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      "-0.2       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      "-0.1       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      " 0.0       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      " 0.1       0.512152  0.517285  0.519314  0.519377  0.518306  0.515241  0.514358\n",
+      " 0.2       0.512152  0.517285  0.519312  0.519380  0.518312  0.515261  0.514378\n",
+      " 0.3       0.512377  0.517519  0.519726  0.519915  0.518912  0.515833  0.514989\n",
+      " 0.4       0.514810  0.520208  0.522680  0.522851  0.522297  0.519223  0.518537\n",
+      " 0.5       0.519072  0.521223  0.523328  0.522166  0.520605  0.516764  0.515168\n",
+      " 0.6       0.503609  0.499516  0.496933  0.492098  0.487352  0.481499  0.477991\n",
+      " 0.7       0.440670  0.424079  0.412721  0.400887  0.389046  0.378365  0.368779\n",
+      " 0.8       0.263436  0.235873  0.211627  0.191348  0.177358  0.165539  0.155024\n",
+      " 0.9       0.056165  0.048927  0.045716  0.041370  0.040401  0.039971  0.039635\n",
       "\n",
       "F1 AVG\n",
       "K-Means          1         3         5         7         9         11        13\n",
@@ -341,9 +383,9 @@
     "\n",
     "# Display the tables\n",
     "print(\"Precision AVG\")\n",
-    "#print(df_precision)\n",
+    "print(df_precision)\n",
     "print(\"\\nRecall AVG\")\n",
-    "#print(df_recall)\n",
+    "print(df_recall)\n",
     "print(\"\\nF1 AVG\")\n",
     "print(df_f1)\n",
     "\n",
