--- a/sceneGraph_update/result_overview.ipynb
+++ b/sceneGraph_update/result_overview.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -17,41 +17,75 @@
      "output_type": "stream",
      "text": [
       "Precision\n",
-      "Votes            2         3         4         5         6         7         8         9         10        11        12        13\n",
-      "Threshold                                                                                                                        \n",
-      "0.1        0.908333  0.900000  0.883333  0.841667  0.841667  0.791667  0.691667  0.625000  0.575000  0.525000  0.475000  0.416667\n",
-      "0.3        0.900000  0.850000  0.800000  0.708333  0.583333  0.441667  0.366667  0.266667  0.233333  0.150000  0.116667  0.083333\n",
-      "0.5        0.883333  0.783333  0.616667  0.425000  0.300000  0.133333  0.108333  0.066667  0.041667  0.016667  0.008333  0.008333\n",
-      "0.7        0.800000  0.541667  0.308333  0.125000  0.058333  0.016667  0.016667  0.008333  0.008333  0.000000  0.000000  0.000000\n",
-      "0.9        0.408333  0.091667  0.033333  0.008333  0.008333  0.008333  0.008333  0.008333  0.008333  0.000000  0.000000  0.000000\n",
+      "Votes          1         2         3         4         5         6         7       8         9\n",
+      "Poitns                                                                                        \n",
+      "5       0.679435  0.687500  0.705357  0.729167  0.818182  0.823529  0.807692  0.8125  0.785714\n",
+      "10      0.679435  0.687500  0.705357  0.729167  0.818182  0.823529  0.807692  0.8125  0.785714\n",
+      "15      0.687500  0.696121  0.715278  0.729167  0.818182  0.823529  0.807692  0.8125  0.785714\n",
+      "20      0.696121  0.705357  0.725962  0.729167  0.818182  0.823529  0.807692  0.8125  0.785714\n",
+      "25      0.705357  0.715278  0.737500  0.729167  0.818182  0.823529  0.807692  0.8125  0.785714\n",
+      "30      0.715278  0.725962  0.750000  0.741848  0.833333  0.843750  0.807692  0.8125  0.785714\n",
+      "35      0.715278  0.725962  0.750000  0.741848  0.833333  0.843750  0.807692  0.8125  0.785714\n",
+      "40      0.725962  0.737500  0.750000  0.741848  0.833333  0.843750  0.807692  0.8125  0.785714\n",
+      "45      0.737500  0.750000  0.763587  0.755682  0.833333  0.843750  0.807692  0.8125  0.785714\n",
+      "50      0.737500  0.750000  0.763587  0.755682  0.833333  0.843750  0.807692  0.8125  0.785714\n",
       "\n",
       "Recall\n",
-      "Votes            2         3         4         5         6         7         8         9         10        11        12        13\n",
-      "Threshold                                                                                                                        \n",
-      "0.1        0.055273  0.054810  0.054051  0.051944  0.051944  0.050184  0.044746  0.040926  0.038546  0.034297  0.031991  0.028782\n",
-      "0.3        0.054810  0.052195  0.049878  0.046011  0.039065  0.028055  0.025081  0.016212  0.014878  0.006470  0.004701  0.003171\n",
-      "0.5        0.054175  0.049540  0.035355  0.023010  0.017752  0.006446  0.005289  0.003966  0.002379  0.000439  0.000225  0.000225\n",
-      "0.7        0.049843  0.028590  0.019158  0.009603  0.003694  0.001416  0.001416  0.001190  0.001190  0.000000  0.000000  0.000000\n",
-      "0.9        0.025274  0.004198  0.002223  0.001190  0.001190  0.001190  0.001190  0.001190  0.001190  0.000000  0.000000  0.000000\n",
+      "Votes          1         2         3         4         5         6         7         8         9\n",
+      "Points                                                                                          \n",
+      "5       0.792754  0.779167  0.766667  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "10      0.792754  0.779167  0.766667  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "15      0.792754  0.779167  0.766667  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "20      0.779167  0.766667  0.755128  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "25      0.779167  0.766667  0.755128  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "30      0.779167  0.766667  0.755128  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "35      0.779167  0.766667  0.755128  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "40      0.779167  0.766667  0.755128  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "45      0.779167  0.766667  0.755128  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
+      "50      0.779167  0.766667  0.755128  0.735897  0.665509  0.595905  0.481681  0.427083  0.379167\n",
       "\n",
       "F1\n",
-      "Votes            2         3         4         5         6         7         8         9         10        11        12        13\n",
-      "Threshold                                                                                                                        \n",
-      "0.1        0.097012  0.096135  0.094684  0.090722  0.090722  0.087338  0.077240  0.070154  0.065649  0.058125  0.053745  0.047744\n",
-      "0.3        0.096135  0.091213  0.086820  0.079415  0.066702  0.048368  0.042653  0.028289  0.025731  0.012308  0.008994  0.006083\n",
-      "0.5        0.094929  0.086143  0.062236  0.041285  0.031228  0.012090  0.009889  0.007338  0.004373  0.000855  0.000439  0.000439\n",
-      "0.7        0.086747  0.051679  0.033645  0.015734  0.006802  0.002522  0.002522  0.002083  0.002083  0.000000  0.000000  0.000000\n",
-      "0.9        0.043302  0.007863  0.004062  0.002083  0.002083  0.002083  0.002083  0.002083  0.002083  0.000000  0.000000  0.000000\n",
+      "Votes          1         2         3         4         5         6         7         8         9\n",
+      "Poitns                                                                                          \n",
+      "5       0.729391  0.729391  0.734632  0.731613  0.733990  0.687406  0.597884  0.538986  0.492723\n",
+      "10      0.729391  0.729391  0.734632  0.731613  0.733990  0.687406  0.597884  0.538986  0.492723\n",
+      "15      0.734632  0.734632  0.740074  0.731613  0.733990  0.687406  0.597884  0.538986  0.492723\n",
+      "20      0.734632  0.734632  0.740074  0.731613  0.733990  0.687406  0.597884  0.538986  0.492723\n",
+      "25      0.740074  0.740074  0.745731  0.731613  0.733990  0.687406  0.597884  0.538986  0.492723\n",
+      "30      0.745731  0.745731  0.751613  0.737327  0.739943  0.692720  0.597884  0.538986  0.492723\n",
+      "35      0.745731  0.745731  0.751613  0.737327  0.739943  0.692720  0.597884  0.538986  0.492723\n",
+      "40      0.751613  0.751613  0.751613  0.737327  0.739943  0.692720  0.597884  0.538986  0.492723\n",
+      "45      0.757735  0.757735  0.757735  0.743280  0.739943  0.692720  0.597884  0.538986  0.492723\n",
+      "50      0.757735  0.757735  0.757735  0.743280  0.739943  0.692720  0.597884  0.538986  0.492723\n",
       "\n",
       "Box IoU\n",
-      "Votes            2         3         4         5         6         7         8         9         10        11        12        13\n",
-      "Threshold                                                                                                                        \n",
-      "0.1        0.077271  0.077271  0.077271  0.074777  0.074777  0.073585  0.069334  0.059333  0.057254  0.055713  0.051176  0.045221\n",
-      "0.3        0.089285  0.087183  0.084347  0.078350  0.068696  0.053281  0.048492  0.039355  0.034227  0.021832  0.018711  0.016229\n",
-      "0.5        0.076230  0.071836  0.057704  0.043168  0.031545  0.012754  0.011412  0.005720  0.003581  0.001374  0.001032  0.001032\n",
-      "0.7        0.063222  0.044191  0.025985  0.013367  0.006642  0.001005  0.001005  0.000000  0.000000  0.000000  0.000000  0.000000\n",
-      "0.9        0.024838  0.005299  0.001429  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000\n",
-      "The highest F1 score is 0.0970, achieved at threshold 0.1 and K-Means value 2.\n"
+      "Votes          1         2         3        4        5         6         7         8         9\n",
+      "Poitns                                                                                        \n",
+      "5       0.270449  0.274622  0.279363  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "10      0.270449  0.274622  0.279363  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "15      0.270449  0.274622  0.279363  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "20      0.274818  0.279363  0.284535  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "25      0.274818  0.279363  0.284535  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "30      0.274818  0.279363  0.284535  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "35      0.274818  0.279363  0.284535  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "40      0.274818  0.279363  0.284535  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "45      0.274818  0.279363  0.284535  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "50      0.274818  0.279363  0.284535  0.27944  0.28103  0.273743  0.282103  0.285843  0.272335\n",
+      "\n",
+      "Center Distance\n",
+      "Votes          1         2         3         4         5         6         7         8         9\n",
+      "Poitns                                                                                          \n",
+      "5       0.766047  0.779234  0.765068  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "10      0.766047  0.779234  0.765068  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "15      0.766047  0.779234  0.765068  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "20      0.770899  0.784871  0.770317  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "25      0.770899  0.784871  0.770317  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "30      0.770899  0.784871  0.770317  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "35      0.770899  0.784871  0.770317  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "40      0.770899  0.784871  0.770317  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "45      0.770899  0.784871  0.770317  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "50      0.770899  0.784871  0.770317  0.793907  0.793637  0.746879  0.764437  0.774969  0.845297\n",
+      "The highest F1 score is 0.7577, achieved at threshold 45 and K-Means value 1.\n"
      ]
     }
    ],
@@ -67,6 +101,7 @@
     "import h5py\n",
     "import os.path as osp\n",
     "\n",
+    "threshold = \"0.1\"\n",
     "final_precision = []\n",
     "final_recall = []\n",
     "final_f1 = []\n",
@@ -80,28 +115,7 @@
     "        #             }\n",
     "                    \n",
     "# Access the contents\n",
-    "filepath = \"/media/ekoller/T7/center_statistics/statistics_object_prediction.0.60.pkl\"\n",
-    "with open(filepath, 'rb') as file:\n",
-    "    result = pickle.load(file)\n",
-    "\n",
-    "final_precision.extend(result.get(\"precision\", None))\n",
-    "final_recall.extend(result.get(\"recall\", None))\n",
-    "final_f1.extend(result.get(\"f1\", None))\n",
-    "final_boxes.extend(result.get(\"box_iou\", None))\n",
-    "\n",
-    "\n",
-    "\n",
-    "filepath = \"/media/ekoller/T7/center_statistics/statistics_object_prediction.60.120.pkl\"\n",
-    "with open(filepath, 'rb') as file:\n",
-    "    result = pickle.load(file)\n",
-    "\n",
-    "final_precision.extend(result.get(\"precision\", None))\n",
-    "final_recall.extend(result.get(\"recall\", None))\n",
-    "final_f1.extend(result.get(\"f1\", None))\n",
-    "final_boxes.extend(result.get(\"box_iou\", None))\n",
-    "\n",
-    "\n",
-    "# filepath = \"/media/ekoller/T7/center_statistics/statistics_object_prediction.120.180.pkl\"\n",
+    "# filepath = osp.join(\"/media/ekoller/T7/center_statistics\", threshold, \"statistics_object_prediction.0.60.pkl\")\n",
     "# with open(filepath, 'rb') as file:\n",
     "#     result = pickle.load(file)\n",
     "\n",
@@ -109,6 +123,29 @@
     "# final_recall.extend(result.get(\"recall\", None))\n",
     "# final_f1.extend(result.get(\"f1\", None))\n",
     "# final_boxes.extend(result.get(\"box_iou\", None))\n",
+    "# final_centers.extend(result.get(\"box_iou\", None))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# filepath = osp.join(\"/media/ekoller/T7/center_statistics\", threshold, \"statistics_object_prediction.60.120.pkl\")\n",
+    "# with open(filepath, 'rb') as file:\n",
+    "#     result = pickle.load(file)\n",
+    "\n",
+    "# final_precision.extend(result.get(\"precision\", None))\n",
+    "# final_recall.extend(result.get(\"recall\", None))\n",
+    "# final_f1.extend(result.get(\"f1\", None))\n",
+    "# final_boxes.extend(result.get(\"box_iou\", None))\n",
+    "# final_centers.extend(result.get(\"box_iou\", None))\n",
+    "\n",
+    "filepath = osp.join(\"/media/ekoller/T7/center_statistics\", threshold, \"statistics_object_prediction.120.180.pkl\")\n",
+    "with open(filepath, 'rb') as file:\n",
+    "    result = pickle.load(file)\n",
+    "\n",
+    "final_precision.extend(result.get(\"precision\", None))\n",
+    "final_recall.extend(result.get(\"recall\", None))\n",
+    "final_f1.extend(result.get(\"f1\", None))\n",
+    "final_boxes.extend(result.get(\"iou_boxes\", None))\n",
+    "final_centers.extend(result.get(\"mean_center_difference\", None))\n",
     "\n",
     "\n",
     "\n",
@@ -117,28 +154,35 @@
     "final_recall = np.mean(final_recall, axis=0)\n",
     "final_f1= np.mean(final_f1, axis= 0)\n",
     "final_boxes = np.mean(final_boxes, axis= 0)\n",
+    "final_centers = np.mean(final_centers,axis = 0)\n",
     "\n",
-    "minimum_votes = [2,3,4,5,6,7,8,9,10,11,12,13]\n",
-    "threshold =  [0.1,0.3,0.5,0.7,0.9]\n",
+    "\n",
+    "\n",
+    "minimum_votes = [1,2,3,4,5,6,7,8,9]\n",
+    "minimum_points = [5,10,15,20,25,30,35,40,45,50]\n",
     "\n",
     "# Create a DataFrame for each metric\n",
-    "df_precision = pd.DataFrame(final_precision, index=threshold, columns=minimum_votes)\n",
-    "df_recall = pd.DataFrame(final_recall, index=threshold, columns=minimum_votes)\n",
-    "df_f1 = pd.DataFrame(final_f1, index=threshold, columns=minimum_votes)\n",
-    "df_boxes = pd.DataFrame(final_boxes, index=threshold, columns=minimum_votes)\n",
+    "df_precision = pd.DataFrame(final_precision, index=minimum_points, columns=minimum_votes)\n",
+    "df_recall = pd.DataFrame(final_recall, index=minimum_points, columns=minimum_votes)\n",
+    "df_f1 = pd.DataFrame(final_f1, index=minimum_points, columns=minimum_votes)\n",
+    "df_boxes = pd.DataFrame(final_boxes, index=minimum_points, columns=minimum_votes)\n",
+    "df_centers = pd.DataFrame(final_centers, index=minimum_points, columns=minimum_votes)\n",
     "\n",
     "# Set index and column labels for better readability\n",
-    "df_precision.index.name = 'Threshold'\n",
+    "df_precision.index.name = 'Poitns'\n",
     "df_precision.columns.name = 'Votes'\n",
     "\n",
-    "df_recall.index.name = 'Threshold'\n",
+    "df_recall.index.name = 'Points'\n",
     "df_recall.columns.name = 'Votes'\n",
     "\n",
-    "df_f1.index.name = 'Threshold'\n",
+    "df_f1.index.name = 'Poitns'\n",
     "df_f1.columns.name = 'Votes'\n",
     "\n",
-    "df_boxes.index.name = 'Threshold'\n",
+    "df_boxes.index.name = 'Poitns'\n",
     "df_boxes.columns.name = 'Votes'\n",
+    "\n",
+    "df_centers.index.name = 'Poitns'\n",
+    "df_centers.columns.name = 'Votes'\n",
     "\n",
     "# Set Pandas options to display without wrapping\n",
     "pd.set_option('display.max_columns', None)  # Ensure all columns are shown\n",
@@ -155,6 +199,9 @@
     "print(df_f1)\n",
     "print(\"\\nBox IoU\")\n",
     "print(df_boxes)\n",
+    "print(\"\\nCenter Distance\")\n",
+    "print(df_centers)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
